--- a/estilos/style.css
+++ b/estilos/style.css
@@ -36,3 +36,11 @@ section#telefone/* # = com id*/ {
     background-color: aquamarine;
     background: url('../imagens/frame-iphone.png') no-repeat;
 }
+
+iframe#tela {
+    position: relative;
+    top: 80px;
+    left: 22px;
+    width: 267px;
+    height: 471px;
+}
